[gd_scene format=3 uid="uid://dlg0p3fm8doel"]

[ext_resource type="Script" uid="uid://b4xnlct5nbnvw" path="res://Scenes/opciones.gd" id="1_3hjeq"]
[ext_resource type="Texture2D" uid="uid://ck64mjk7jeep7" path="res://Scenes/menu.png" id="1_vck7s"]
[ext_resource type="PackedScene" uid="uid://12icttaroiks" path="res://Audio/slider_audio.tscn" id="2_o14iw"]

[node name="Opciones" type="Control" unique_id=1684543358]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3hjeq")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1292483759]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_right = 895.5
offset_bottom = 526.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.57, 0.56)
texture = ExtResource("1_vck7s")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=929645709]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
offset_right = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 400

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer" unique_id=1471761129]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2" unique_id=1811832565]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Opciones"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=778371086]
layout_mode = 2
alignment = 1

[node name="Row_Sonido" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1105593556]
layout_mode = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Row_Sonido" unique_id=1917159992]
layout_mode = 2
size_flags_horizontal = 0
text = "Sonido : "

[node name="SliderAudio" parent="MarginContainer/VBoxContainer/Row_Sonido" unique_id=661129500 instance=ExtResource("2_o14iw")]
layout_mode = 2

[node name="FullscreenButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1227011247]
layout_mode = 2
text = "Fullscreen: OFF"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1225405418]
layout_mode = 2
text = "Volver
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_quit_options_button_pressed"]
